--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,7 @@ body{
 
     /* temp */
     height: 100vh;
+    gap: 32px;
 }
 
 .project.container{
@@ -16,13 +17,49 @@ body{
     background-color: rgb(255, 175, 175);
 }
 
+.project.top-panel {
+    display: flex;
+    justify-content: space-between;
+}
+
 .project.name{
     font-size: 1.5rem;
+}
+
+.todo.modal{
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    /* overflow: auto; enable scroll if needed, is this thing even working? */
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.todo.modal-content{
+    background-color: white;
+    margin: 35vh auto;
+    width: 100px;
+    height: 100px;
+    padding: 4px;
+}
+
+.modal.close-btn{
+    color: black;
+    float: right;
+}
+
+.modal.close-btn:hover,
+.modal.close-btn:focus{
+    cursor: pointer;    
 }
 
 .todo.container{
     display: flex;
     gap: 16px;
+    padding: 4px;
     background-color: rgb(133, 245, 245);
 }
 
