--- a/src/style.css
+++ b/src/style.css
@@ -33,7 +33,7 @@ body{
 }
 
 .todo.modal{
-    display: none;
+    display: flex;
     justify-content: center;
     align-items: center;
     position: fixed;
