--- a/src/style.css
+++ b/src/style.css
@@ -32,6 +32,19 @@ body{
     font-size: 1.5rem;
 }
 
+.todo.list{
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.todo.container{
+    display: flex;
+    gap: 16px;
+    padding: 4px;
+    background-color: rgb(133, 245, 245);
+}
+
 .todo.modal{
     display: flex;
     justify-content: center;
@@ -78,10 +91,4 @@ body{
     gap: 4px;
 }
 
-.todo.container{
-    display: flex;
-    gap: 16px;
-    padding: 4px;
-    background-color: rgb(133, 245, 245);
-}
 
