--- a/src/style/style.css
+++ b/src/style/style.css
@@ -9,6 +9,10 @@ body{
     gap: 32px;
 }
 
+.hidden{
+    display: none!important;
+}
+
 .top-panel{
     display: flex;
     justify-content: space-between;
@@ -22,6 +26,11 @@ body{
     display: flex;
     gap: 4px;
     justify-content: end;
+}
+
+.btn-panel{
+    display: flex;
+    gap: 4px;
 }
 
 .add-project.btn{
@@ -71,10 +80,25 @@ body{
 
 .todo.container{
     display: flex;
-    /* justify-content: space-evenly; */
-    gap: 16px;
+    gap: 4px;
     padding: 4px;
     background-color: rgb(133, 245, 245);
+}
+
+.todo-panel{
+    display: flex;
+    flex-direction: column;
+}
+
+.expand-panel{
+    display: flex;
+    background-color: rgb(233, 250, 160);
+    padding: 4px;
+}
+
+.todo-noDesc-panel{
+    display: flex;
+    gap: 16px;
 }
 
 input.todo{
