--- a/src/style/style.css
+++ b/src/style/style.css
@@ -94,6 +94,7 @@ body{
     display: flex;
     background-color: rgb(233, 250, 160);
     padding: 4px;
+    height: 100px;
 }
 
 .todo-noDesc-panel{
@@ -109,6 +110,21 @@ input.todo{
 input.todo:disabled{
     background-color: transparent;
     color: black;
+}
+
+textarea#desc{
+    resize: none;
+}
+
+textarea.todo{
+    resize: none;
+    width: 100%;
+    border: none;
+    outline: none;
+}
+
+textarea.todo:disabled{
+    background-color: transparent;
 }
 
 .modal-background{
