Change color of todo's container based on priority level

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -175,4 +175,15 @@ textarea.todo:disabled{
     gap: 4px;
 }
 
+.todo.container:has(.low){
+    background-color: greenyellow;
+}
+
+.todo.container:has(.medium){
+    background-color: aqua;
+}
+
+.todo.container:has(.high){
+    background-color: orangered;
+}
 
