--- a/src/style/style.css
+++ b/src/style/style.css
@@ -184,6 +184,17 @@ textarea.todo:disabled{
 }
 
 .todo.container:has(.high){
-    background-color: orangered;
+    background-color: palevioletred;
 }
 
+.todo.container:has(.deadline){
+    box-shadow: 0px 0px 0px 3px red inset;
+}
+
+.todo.container:has(.alert){
+    box-shadow: 0px 0px 0px 3px yellow inset;
+}
+
+.todo.container:has(.deadline-passed){
+    box-shadow: 0px 0px 0px 3px gray inset;
+}
