--- a/src/style/style.css
+++ b/src/style/style.css
@@ -3,14 +3,32 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: rgb(122, 248, 122);
 
     /* temp */
     height: 100vh;
-    gap: 32px;
+    /* gap: 32px; */
 }
 
 .hidden{
     display: none!important;
+}
+
+.header.container{
+    display: flex;
+    justify-content: center;
+    background-color: white;
+    padding: 16px;
+    width: 100%;
+}
+
+.header.text {
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.content.container{
+    display: flex;
 }
 
 .top-panel{
@@ -43,12 +61,12 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(122, 248, 122);
     flex-wrap: wrap;
+    padding: 16px;
 
     /* temp */
-    height: 100vh;
-    width: 70vw;
+    /* height: 100vh; */
+    /* width: 70vw; */
     gap: 32px;
 }
 
