--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,12 +1,12 @@
 body{
     margin: 0;
+    padding: 0;
     display: flex;
     flex-direction: column;
-    align-items: center;
     background-color: rgb(122, 248, 122);
 
     /* temp */
-    height: 100vh;
+    height: 100%;
     /* gap: 32px; */
 }
 
@@ -19,7 +19,6 @@ body{
     justify-content: center;
     background-color: white;
     padding: 16px;
-    width: 100%;
 }
 
 .header.text {
@@ -29,6 +28,13 @@ body{
 
 .content.container{
     display: flex;
+}
+
+.sidebar.container{
+    display: flex;
+    flex-direction: column;
+    background-color: aquamarine;
+    padding: 16px;
 }
 
 .top-panel{
