--- a/src/style/style.css
+++ b/src/style/style.css
@@ -33,8 +33,29 @@ body{
 .sidebar.container{
     display: flex;
     flex-direction: column;
+    align-items: center;
     background-color: aquamarine;
     padding: 16px;
+}
+
+.sidebar.project-item-list{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 24px;
+    padding: 4px;
+    gap: 16px;
+    width: 80%;
+    background-color: lightcoral;
+}
+
+.sidebar.project-item{
+    font-weight: bold;
+}
+
+.sidebar.project-item:hover{
+    cursor: pointer;
+    color: gold;
 }
 
 .top-panel{
