--- a/src/style/style.css
+++ b/src/style/style.css
@@ -4,10 +4,7 @@ body{
     display: flex;
     flex-direction: column;
     background-color: rgb(122, 248, 122);
-
-    /* temp */
-    height: 100%;
-    /* gap: 32px; */
+    height: 100vh;
 }
 
 .hidden{
@@ -28,6 +25,7 @@ body{
 
 .content.container{
     display: flex;
+    flex-grow: 1;
 }
 
 .sidebar.container{
@@ -89,10 +87,10 @@ body{
     align-items: center;
     flex-wrap: wrap;
     padding: 16px;
+    width: 100%;
 
     /* temp */
     /* height: 100vh; */
-    /* width: 70vw; */
     gap: 32px;
 }
 
