--- a/src/style/style.css
+++ b/src/style/style.css
@@ -83,7 +83,7 @@ body{
 
 .btn-panel{
     display: flex;
-    gap: 4px;
+    gap: 8px;
 }
 
 .add-project.btn{
@@ -94,23 +94,23 @@ body{
 .project.area{
     display: flex;
     justify-content: center;
-    padding: 16px;
     flex-grow: 1;
-    gap: 32px;
 }
 
 .project.container{
     display: flex;
     flex-direction: column;
     align-self: flex-start;
-    width: 800px;
+    width: 1100px;
     gap: 8px;
+    margin: 32px 0;
     padding: 8px;
     background-color: rgb(255, 175, 175);
 }
 
 .project.name{
-    font-size: 1.5rem;
+    font-size: 36px;
+    width: 700px;
     border: none;
     outline: none;
 }
@@ -129,6 +129,7 @@ body{
 
 .todo.container{
     display: flex;
+    justify-content: space-between;
     gap: 4px;
     padding: 4px;
     background-color: rgb(133, 245, 245);
@@ -149,11 +150,23 @@ body{
 .todo-noDesc-panel{
     display: flex;
     gap: 16px;
+    height: 48px;
+    align-items: center
 }
 
 input.todo{
     border: none;
     outline: none;
+}
+
+input[type="date"].todo,
+input[type="text"].todo{
+    font-size: 20px;
+    padding: 4px 8px;
+}
+
+input[type="text"].todo{
+    width: 500px;
 }
 
 input.todo:disabled{
