--- a/src/style/style.css
+++ b/src/style/style.css
@@ -130,12 +130,15 @@ body{
 }
 
 .top-panel > .btn-panel > .btn:active{
-    transform: translate(1px, 1px);
+    transform: translate(2px, 2px);
     box-shadow: none;
 }
 
 .btn{
     border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: #ffd51a;
     padding: 8px;
     border-radius: 6px;
@@ -143,6 +146,7 @@ body{
     font-size: 18px;
     font-weight: bold;
     text-shadow: 1px 1px 0px #b89600;
+    box-shadow: 2px 2px 0 0 rgba(0, 0, 0, 40%);
 }
 
 .btn:hover{
@@ -154,16 +158,16 @@ body{
     background-color: #ffd51a;
     color: #1b051b;
     text-shadow: none;
+    transform: translate(2px, 2px);
+    box-shadow: none;
 }
 
 .add-project.btn{
     height: 42px;
     width: 42px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     color: #1cff41;
     text-shadow: 1px 1px 1px #386955;
+    box-shadow: none;
     background-color: transparent;
     border-radius: 16px;
     font-size: 32px; 
@@ -198,6 +202,17 @@ body{
     display: flex;
     align-items: center;
     gap: 4px;
+}
+
+.delete-todo.btn{
+    font-size: 28px;
+    color: red;
+}
+
+.edit-todo.btn,
+.delete-todo.btn{
+    height: 35px;
+    width: 35px;
 }
 
 .project.container{
@@ -249,8 +264,9 @@ body{
     display: flex;
     justify-content: space-between;
     gap: 4px;
-    padding: 4px;
-    background-color: rgb(133, 245, 245);
+    padding: 4px 12px;
+    border-radius: 8px;
+    background-color: #F0C987;
 }
 
 .todo-panel{
@@ -283,13 +299,49 @@ input[type="text"].todo{
     padding: 4px 8px;
 }
 
+input[type="date"].todo{
+    border-radius: 8px;
+    text-shadow: 
+        0 1px 0 white,
+        0 -1px 0 white,
+        1px 0 0 white,
+        -1px 0 0 white,
+        0 2px 0 white,
+        0 -2px 0 white,
+        2px 0 0 white,
+        -2px 0 0 white,
+        1px 1px 0 white,
+        -1px -1px 0 white,
+        1px -1px 0 white,
+        -1px -1px 0 white
+    ;
+    color: black;
+}
+
 input[type="text"].todo{
-    width: 500px;
+    width: 450px;
 }
 
 input.todo:disabled{
     background-color: transparent;
     color: black;
+}
+
+input[type="date"].todo:disabled{
+    background-color: white;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 40%);
+}
+
+input[type="date"].todo.deadline{
+    background-color: red;
+}
+
+input[type="date"].todo.alert{
+    background-color: orangered;
+}
+
+input[type="date"].todo.deadline-passed{
+    background-color: grey;
 }
 
 textarea#desc{
@@ -356,25 +408,13 @@ textarea.todo:disabled{
 }
 
 .todo.container:has(.low){
-    background-color: greenyellow;
+    background-color: #E9FF70;
 }
 
 .todo.container:has(.medium){
-    background-color: aqua;
+    background-color: #70D6FF;
 }
 
 .todo.container:has(.high){
-    background-color: palevioletred;
-}
-
-.todo.container:has(.deadline){
-    box-shadow: 0px 0px 0px 3px red inset;
-}
-
-.todo.container:has(.alert){
-    box-shadow: 0px 0px 0px 3px yellow inset;
-}
-
-.todo.container:has(.deadline-passed){
-    box-shadow: 0px 0px 0px 3px gray inset;
+    background-color: #FF9770;
 }
